# avatars

./: .gitignore  README.md  extract_frames.js  package-lock.json  pyproject.toml
aws/: setup-gpu.sh
scripts/: stylize_faceid.py  stylize_faceid_v2.py  stylize_instantid.py  stylize_ipadapter.py  stylize_pixar.py
src/: __init__.py  cli.py  config.py
src/animation/: __init__.py  local_backend.py  replicate_backend.py
src/style/: __init__.py  replicate_style.py
src/tts/: __init__.py  bark_tts.py  replicate_tts.py
